--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,8 +6,8 @@
         android:title="@string/sign_out"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/fresh_config_menu"
-        android:title="@string/fresh_config"
+        android:id="@+id/user_profile_menu"
+        android:title="@string/user_profile_menu_label"
         app:showAsAction="never"/>
     <item
         android:id="@+id/invite_menu"
